# ShapTo3Dtile

./: CMakeLists.txt  README.md
src/: help.cpp  help.h  json.hpp  linkClasss.cpp  linkClasss.h  main.cpp  shapTo3Dtiles.cpp  shapTo3Dtiles.h  tileset.cpp  tiny_gltf.h
test/ShapeData/: building.shp  building.shx
vs/: shapTo3Dtiles.sln  shapTo3Dtiles.vcxproj  shapTo3Dtiles.vcxproj.filters
